# water-column-sonar-processing

./: .env-test  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest-coverage.txt  pytest.ini  requirements.txt  requirements_dev.txt
.github/workflows/: publish-to-test-pypi.yaml  release_action.yaml  release_action.yml  test_action.yaml
open-science-data-federation/: experiments_with_xbatcher_datasets.py
open-science-data-federation/osdf_examples/: sonar_ai.ipynb
osdf/osdf_examples/: sonar_ai.ipynb
src/: __init__.py
src/water_column_sonar_processing/: process.py
src/water_column_sonar_processing/aws/: dynamodb_manager.py  s3_manager.py  sns_manager.py
src/water_column_sonar_processing/cruise/: create_empty_zarr_store.py  resample_regrid.py
src/water_column_sonar_processing/geometry/: geometry_manager.py  geometry_simplification.py  pmtile_generation.py
src/water_column_sonar_processing/index/: index_manager.py
src/water_column_sonar_processing/model/: zarr_manager.py
src/water_column_sonar_processing/processing/: __init__.py  cruise_sampler.py  raw_to_zarr.py
src/water_column_sonar_processing/utility/: constants.py
tests/: D20070724-T042400.json  __init__.py  conftest.py  test_create_empty_zarr_store.py  test_dynamodb_manager.py  test_geometry_manager.py  test_index.py  test_model.py  test_pmtile_generation.py  test_process.py  test_raw_to_zarr.py  test_resample_regrid.py  test_s3_manager.py  test_s3fs_manager.py  test_s3fs_with_moto.py  test_zarr_manager.py
tests/aws/: test_dynamodb_manager.py  test_s3_manager.py  test_s3fs_manager.py
tests/aws_manager/: test_dynamodb_manager.py  test_s3_manager.py  test_s3fs_manager.py  test_sns_sqs_manager.py
tests/cruise/: test_create_empty_zarr_store.py  test_create_empty_zarr_store_level_3.py  test_resample_regrid.py
tests/dataset/: test_dataset_manager.py
tests/geometry/: test_elevation_manager.py  test_geometry_manager.py  test_line_simplification.py  test_pmtile_generation.py  test_spatiotemporal.py
tests/geometry_manager/: test_geometry_manager.py
tests/geospatial/: test_geometry_manager.py  test_geometry_simplification.py
tests/index/: test_index.py  test_index_manager.py
tests/index_manager/: test_index.py
tests/model/: test_model.py  test_zarr_manager.py
tests/model/aws/: test_dynamodb_manager.py  test_s3_manager.py  test_s3fs_manager.py  test_sns_sqs_manager.py
tests/model/cruise/: test_create_empty_zarr_store.py  test_resample_regrid.py
tests/model/geospatial/: test_geometry_manager.py  test_geometry_simplification.py
tests/model/index/: test_index.py
tests/model/zarr/: test_foo.py  test_zarr_manager.py
tests/processing/: test_batch_downloader.py  test_raw_to_netcdf.py  test_raw_to_zarr.py
tests/test_resources/: D20070724-T042400.bot
tests/test_resources/dataset/HB1906.zarr/: .zattrs  .zmetadata
tests/test_resources/dataset/HB1906.zarr/Sv/: .zarray  .zattrs  0.0.0  (+3 more)
tests/test_resources/legacy_support/D20070720-T224031.raw_v0.7.1.zarr/: .zattrs  .zmetadata
tests/test_resources/legacy_support/D20070720-T224031.raw_v0.8.0.zarr/: .zattrs  .zmetadata
tests/test_resources/legacy_support/D20070720-T224031.raw_v0.8.2.zarr/: .zattrs  .zmetadata
tests/test_resources/legacy_support/D20070720-T224031.raw_v0.8.4.zarr/: .zattrs  .zmetadata
tests/test_resources/legacy_support/D20070720-T224031.raw_v0.9.0.zarr/: .zattrs  .zmetadata
tests/test_resources/legacy_support/D20070720-T224031.raw_v0.9.1.zarr/: .zattrs  .zmetadata
tests/test_resources/line_simplification/HB1906_geospatial_coordinates.zarr/: .zattrs  .zmetadata
tests/test_resources/raw_to_zarr/: D20070724-T042400.idx  D20070724-T042400.json  D20070724-T042400.raw
tests/test_resources/raw_to_zarr/D20070724-T042400.zarr/: .zmetadata
tests/test_resources/s3_manager/HB1234.zarr/: .zmetadata
tests/test_resources/spatiotemporal/HB1906_spatiotemporal.zarr/: zarr.json
tests/test_resources/zarr_manager/test_cruise.zarr/: .zattrs  .zmetadata
tests/utility/: test_constants.py
tests/zarr_manager/: test_bar.py  test_foo.py  test_zarr_manager.py
water-column-sonar-processing/cruise/: create_empty_zarr_store.py  resample_regrid.py
water-column-sonar-processing/geometry_manager/: geometry_manager.py
water-column-sonar-processing/index_manager/: index_manager.py
water-column-sonar-processing/zarr_manager/: bar.py  foo.py  zarr_manager.py
water_column_sonar_processing/: process.py
water_column_sonar_processing/aws/: dynamodb_manager.py  s3_manager.py  s3fs_manager.py
water_column_sonar_processing/cruise/: create_empty_zarr_store.py  resample_regrid.py
water_column_sonar_processing/dataset/: dataset_manager.py
water_column_sonar_processing/geometry/: __init__.py  add_spatiotemporal.py  elevation_manager.py  geometry_manager.py  geometry_simplification.py  line_simplification.py  pmtile_generation.py
water_column_sonar_processing/index/: index_manager.py
water_column_sonar_processing/model/: zarr_manager.py
water_column_sonar_processing/processing/: __init__.py  raw_to_netcdf.py  raw_to_zarr.py
water_column_sonar_processing/utility/: constants.py
(+103 files in other folders)
