[project]
name = "water-column-sonar-processing"
version = "26.1.3"
authors = [
    { name = "Rudy Klucik", email = "rudy.klucik@noaa.gov" },
]
maintainers = [
    { name = "Rudy Klucik", email = "rudy.klucik@noaa.gov" },
]
description = "Processing tool for water column sonar data."
keywords = ["ocean", "sonar", "water column", "zarr"]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

# uv sync --all-groups --upgrade
dependencies = [
    #    "black",
    "boto3",
    "boto3-stubs~=1.41.5", #~=1.41.5",
    "botocore",
    "build",
    "echopype",
    "fiona",
    "geopandas",
    "importlib",
    "mock",
    "moto[all]",
    "moto[server]",
    "multidict",
    "netcdf4==1.7.3",
    "numpy==2.3.5",
    "pandas",
    "pandas-stubs",
    "pooch",
    "pyarrow",
    "pykalman",
    "python-dotenv",
    "requests",
    "s3fs==2026.1.0", # problem here, uv finds the wrong one
    "scipy",
    "setuptools",
    "shapely",
    "xarray",
    "zarr",
]

# uv sync --all-groups --upgrade
[dependency-groups]
dev = [
    "bandit[toml]",
    "build",
    "pip",
    "pooch",
    "pre-commit",
    "pytest",
    "pytest-cov", # uv run pytest --cov=testing_demo
    "ruff",
    "tqdm",
]

[project.urls]
Homepage = "https://echo.fish"
Repository = "https://github.com/CI-CMG/water-column-sonar-processing"
Issues = "https://github.com/CI-CMG/water-column-sonar-processing/issues"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pre-commit-hooks.bandit]
exclude = ["*/tests/*"]

