[project]
name = "water-column-sonar-processing"
version = "26.1.4"
authors = [
    { name = "Rudy Klucik", email = "rudy.klucik@noaa.gov" },
]
maintainers = [
    { name = "Rudy Klucik", email = "rudy.klucik@noaa.gov" },
]
description = "Processing tool for water column sonar data."
keywords = ["ocean", "sonar", "water column", "zarr"]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

# uv sync --all-groups --upgrade
dependencies = [
    #    "black",
    "boto3==1.42.19",
    "boto3-stubs", #~=1.41.5",
    "botocore==1.42.19",
    "build==1.4.0",
    "echopype",
    "fiona==1.10.1",
    "geopandas",
    "importlib==1.0.4",
    "mock",
    "moto[all]==5.1.19",
    "moto[server]==5.1.19",
    "multidict==6.7.0",
    "netcdf4==1.7.3",
    "numpy==2.4.1",
    "pandas==2.3.3",
    "pandas-stubs",
    "pooch",
    "pyarrow==22.0.0",
    "pykalman",
    "python-dotenv",
    "requests==2.32.5",
    "s3fs==2026.1.0", # problem here, uv finds the wrong one
    "scipy==1.17.0",
    "setuptools",
    "shapely",
    "xarray==2025.12.0",
    "zarr==3.1.5",
]

# uv sync --all-groups --upgrade
[dependency-groups]
dev = [
    "bandit[toml]",
    "build",
    "pip",
    "pooch",
    "pre-commit",
    "pytest",
    "pytest-cov", # uv run pytest --cov=testing_demo
    "ruff",
    "tqdm",
]

[project.urls]
Homepage = "https://echo.fish"
Repository = "https://github.com/CI-CMG/water-column-sonar-processing"
Issues = "https://github.com/CI-CMG/water-column-sonar-processing/issues"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pre-commit-hooks.bandit]
exclude = ["*/tests/*"]

