[project]
name = "water-column-sonar-processing"
version = "26.4.0"
authors = [
    { name = "Rudy Klucik", email = "rudy.klucik@noaa.gov" },
]
maintainers = [
    { name = "Rudy Klucik", email = "rudy.klucik@noaa.gov" },
]
description = "Processing Tool for Water Column Sonar Data"
keywords = ["ocean", "sonar", "water column", "zarr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

# uv sync --all-groups --upgrade
dependencies = [
    "boto3==1.41.5",
    "boto3-stubs", #~=1.41.5",
    "botocore==1.41.5",
    "build",
    "echopype==0.11.0",
    "fiona==1.10.1",
    "geopandas==1.1.3",
    "importlib==1.0.4",
    "mock",
    "moto[all]==5.1.22",
    "moto[server]==5.1.22",
    "multidict==6.7.1",
    "netcdf4==1.7.4",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pandas-stubs~=3.0.0",
    "pooch==1.9.0",
    "pyarrow==23.0.1",
    "pykalman==0.11.2",
    "python-dotenv",
    "requests==2.33.1",
    "ruff==0.15.8",
    "s3fs==2026.3.0", # problem here, uv finds the wrong one
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "shapely==2.1.2",
    "xarray==2026.2.0",
    "zarr==3.1.6",
]

# uv sync --all-groups --upgrade
[dependency-groups]
dev = [
    "bandit[toml]",
    "build",
    "pip",
    "pooch",
    "pre-commit",
    "pytest",
    "pytest-cov", # uv run pytest --cov=testing_demo
    "ruff",
    "tqdm",
]

[project.urls]
Homepage = "https://echo.fish"
Repository = "https://github.com/CI-CMG/water-column-sonar-processing"
Documentation = "https://github.com/CI-CMG/water-column-sonar-processing"
Issues = "https://github.com/CI-CMG/water-column-sonar-processing/issues"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pre-commit-hooks.bandit]
exclude = ["*/tests/*"]

